syntax = "proto3";

package GeneralCommand;

service CommandClass{
	rpc SendCommand(CmdRequest) returns (CmdReply){}
}

message CmdRequest{
	string CmdName =1;
	string CmdData =2;
}

message CmdReply{
	string CmdName =1;
	string CmdReplyData =2;
}